// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConvertSceneSettings > should render correctly with convert button disabled 1`] = `
<div>
  <div
    data-mocked="Box"
    font-weight="bold"
    margin="{"bottom":"xxs"}"
    variant="p"
  >
    Convert to entities
  </div>
  <div
    data-mocked="Box"
    margin="{"bottom":"xxs"}"
    variant="p"
  >
    Converting your scene to entities enables auto updating, filtering and querying your scene.
  </div>
  <div
    data-mocked="Button"
    data-testid="convert-button"
    disabled=""
  >
    Convert scene
  </div>
  <div
    data-mocked="Box"
    font-weight="bold"
    margin="{"bottom":"xxs","top":"s"}"
    variant="p"
  >
    Refresh cycle
  </div>
  <div
    data-mocked="Checkbox"
    data-testid="auto-update-checkbox"
  >
    Auto update (every 30s)
  </div>
</div>
`;

exports[`ConvertSceneSettings > should render correctly with convert button enabled 1`] = `
<div>
  <div
    data-mocked="Box"
    font-weight="bold"
    margin="{"bottom":"xxs"}"
    variant="p"
  >
    Convert to entities
  </div>
  <div
    data-mocked="Box"
    margin="{"bottom":"xxs"}"
    variant="p"
  >
    Converting your scene to entities enables auto updating, filtering and querying your scene.
  </div>
  <div
    data-mocked="Button"
    data-testid="convert-button"
  >
    Convert scene
  </div>
  <div
    data-mocked="Box"
    font-weight="bold"
    margin="{"bottom":"xxs","top":"s"}"
    variant="p"
  >
    Refresh cycle
  </div>
  <div
    data-mocked="Checkbox"
    data-testid="auto-update-checkbox"
  >
    Auto update (every 30s)
  </div>
</div>
`;
